# LoanGuard-fork

./: .env.example  .gitignore  DOCKER.md  README.md  docker-compose.yml  run.ps1  run.sh  run_test.sh
backend/: .dockerignore  .gitignore  Dockerfile  __init__.py  database.py  main.py  pyproject.toml  schemas.py
backend/notebooks/model/: .gitignore  __init__.py  evaluate_model.py  predict.py  train_model.py
backend/notebooks/model/docs/: TRAINING_STEPS.md  steps.md
backend/routes/: __init__.py  auth.py  history.py  predict.py
frontend/: .dockerignore  Dockerfile
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx  PredictionTable.jsx  RiskBadge.jsx  RiskBar.jsx  StatCard.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/lib/: api.js
frontend/src/pages/: Dashboard.jsx  History.jsx  Login.jsx  Predict.jsx
