[project]
name = "loanguard-backend"
version = "0.1.0"
description = "Home Credit Indonesia loan risk API"
requires-python = ">=3.11,<3.14"
dependencies = [
  "absl-py==2.4.0",
  "altair==5.5.0",
  "annotated-doc==0.0.4",
  "annotated-types==0.7.0",
  "anyio==4.13.0",
  "attrs==25.3.0",
  "bcrypt==5.0.0",
  "blinker==1.9.0",
  "cachetools==6.2.0",
  "certifi==2025.8.3",
  "cffi==2.0.0",
  "charset-normalizer==3.4.3",
  "click==8.2.1",
  "colorama==0.4.6",
  "contourpy==1.3.3",
  "cycler==0.12.1",
  "dnspython==2.8.0",
  "email-validator==2.3.0",
  "fastapi==0.136.1",
  "flatbuffers==25.12.19",
  "fonttools==4.60.1",
  "gitdb==4.0.12",
  "GitPython==3.1.45",
  "h11==0.16.0",
  "idna==3.10",
  "Jinja2==3.1.6",
  "joblib==1.5.3",
  "jsonschema==4.25.1",
  "jsonschema-specifications==2025.4.1",
  "kiwisolver==1.4.9",
  "MarkupSafe==3.0.2",
  "matplotlib==3.10.8",
  "mediapipe==0.10.32",
  "motor==3.7.1",
  "mpmath==1.3.0",
  "narwhals==2.3.0",
  "numpy==2.3.2",
  "opencv-contrib-python==4.13.0.92",
  "opencv-python==4.13.0.92",
  "packaging==25.0",
  "pandas==2.2.3",
  "pillow==11.3.0",
  "protobuf==6.32.0",
  "pyarrow==21.0.0",
  "pycparser==3.0",
  "pydantic==2.13.4",
  "pydantic_core==2.46.4",
  "pydeck==0.9.1",
  "pygame==2.6.1",
  "PyJWT==2.12.1",
  "pymongo==4.17.0",
  "pyparsing==3.2.5",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.2.2",
  "python-multipart==0.0.29",
  "pytz==2025.2",
  "referencing==0.36.2",
  "requests==2.32.5",
  "rpds-py==0.27.1",
  "scikit-learn==1.8.0",
  "scipy==1.17.0",
  "simsimd==6.5.12",
  "six==1.17.0",
  "smmap==5.0.2",
  "sniffio==1.3.1",
  "sounddevice==0.5.5",
  "starlette==1.0.0",
  "streamlit==1.49.1",
  "sympy==1.14.0",
  "tenacity==9.1.2",
  "tensorboard-data-server==0.7.2",
  "threadpoolctl==3.6.0",
  "toml==0.10.2",
  "tornado==6.5.2",
  "tqdm==4.67.3",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0",
  "tzdata==2025.2",
  "urllib3==2.5.0",
  "uvicorn==0.47.0",
  "watchdog==6.0.0",
  "Werkzeug==3.1.5",
  "xgboost==3.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
